--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,11 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+
+<p>Tel: +2347041721669</p>
+<p>Email: cristofarokoye@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  1 Ezennaja Village Oraukwu<br />
+  Idemilli north local goverment area<br />
+  Anambra State<br />
+  Nigeria <br />
 </p>
